Fixed scrollbar's radius and border.

--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@
 .dark_scrollbar slider {
 	background-color: rgba(255, 255, 255, 0.2); 
     border-radius: 4px;
+    border: none;
     box-shadow:inset 1px 1px   rgba(255,255,255,0.05),inset -1px -1px rgba(255,255,255,0.05);
     min-width: 4px;
 }
@@ -186,12 +187,16 @@
 .dark_scrollbar slider:hover {
 	background-color: rgba(255, 255, 255, 0.4);
     box-shadow:inset 1px 1px   rgba(255,255,255,0.1),inset -1px -1px rgba(255,255,255,0.05);
+    border-radius: 4px;
+    border: none;
     min-width: 8px;
 }
 
 .dark_scrollbar slider:hover:active {
 	background-color: rgba(255, 255, 255, 0.3);
     box-shadow:inset 1px 1px   rgba(255,255,255,0.05),inset -1px -1px rgba(255,255,255,0.05);
+    border-radius: 4px;
+    border: none;
     min-width: 8px;
 }
 
@@ -221,6 +226,7 @@
  	box-shadow: none;
  	border: 1px;
  	border-color: transparent;
+    border-radius: 4px;
     min-width: 8px;
 	margin-top: 2px;
 	margin-bottom: 2px;
@@ -231,6 +237,7 @@
  	box-shadow: none;
  	border: 1px;
  	border-color: transparent;
+    border-radius: 4px;
     min-width: 8px;
 	margin-top: 2px;
 	margin-bottom: 2px;
